# bazel-repo-iss18360

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
src/: BUILD.bazel  ClassA.java  ClassB.java
