load("@rules_java//toolchains:default_java_toolchain.bzl", "default_java_toolchain")

default_java_toolchain(
    name = "toolchain_jdk_11",
    configuration = dict(
        # Use an old java_tools javabuilder...
        javabuilder = ["@remote_java_tools_v11_12//:JavaBuilder"],
    ),
    java_runtime = "@rules_java//toolchains:remote_jdk11",
    source_version = "11",
    target_version = "11",
)
